@@ -1,3 +1,8 @@
+2000-12-09  Nick Clifton  <nickc@redhat.com>
+
+	* ld-srec/srec.exp: Expect the srec_test to fail for ARM targets
+	because the -oformat linker command switch cannot be used.
+
 2000-11-06  Alan Modra  <alan@linuxcare.com.au>
 
 	* ld-elfvsb/main.c (PROTECTED_CHECK): Include stdio.h.
